syntax = "proto3";

package booking_service;

service DoctorNotesService {
  // doctorNotes
  rpc CreateDoctorNote(CreateDoctorNoteReq) returns (DoctorNote);
  rpc GetDoctorNote(FieldValueReq) returns (DoctorNote);
  rpc GetAllNotes(GetAllReq) returns (DoctorNotes);
  rpc UpdateDoctorNote(UpdateDoctorNoteReq) returns (DoctorNote);
  rpc DeleteDoctorNote(FieldValueReq) returns (StatusRes);
}

message DoctorNote {
  int64 id = 1;
  int64 appointment_id = 2;
  string doctor_id = 3;
  string patient_id = 4;
  string prescription = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}

message DoctorNotes {
  int64 count = 1;
  repeated DoctorNote doctor_notes = 2;
}

message CreateDoctorNoteReq {
  int64 appointment_id = 1;
  string doctor_id = 2;
  string patient_id = 3;
  string prescription = 4;
}

message UpdateDoctorNoteReq {
  string field = 1;
  string value = 2;
  int64 appointment_id = 3;
  string doctor_id = 4;
  string patient_id = 5;
  string prescription = 6;
}

message FieldValueReq {
  string field = 1;
  string value = 2;
  bool is_active = 3;
}

message StatusRes {
  bool status = 1;
}

message GetAllReq {
  string field = 1;
  string value = 2;
  bool is_active = 3;
  uint64 page = 4;
  uint64 limit = 5;
  string order_by = 6;
}